--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,14 @@
-<% provide(:title, 'Home') %>
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
-<%= link_to 'Help page', static_pages_help_path %> <br>
-<%= link_to 'About page', static_pages_about_path %>
+<div class="center hero-unit">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorital</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<!--<%= link_to image_tag("rails-logo.svg", alt: "Rails"), 'http://rubyonrails.org/images/rails-logo.svg' %>-->
+<img alt="Rails" src="http://rubyonrails.org/images/rails-logo.svg" width="96" height="96">
