--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,4 +7,4 @@
   is the sample application for the tutorial.
 </p>
 <%= link_to 'Home page', root_path %> <br>
-<%= link_to 'Help page', static_pages_help_path %>
+<%= link_to 'Help page', help_path %>
