--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -7,4 +7,4 @@
   <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
 </p>
 <%= link_to 'Home page', root_path %> <br>
-<%= link_to 'About page', static_pages_about_path %>
+<%= link_to 'About page', about_path %>
